tests/typec-test/test_out/spec-parse-out.txt
error: expected '\n' | ';' but got '['
 --> spec\root.ctl:1:38
  |
1 | priv spec Clay ; priv struct AnyClay [C : Clay] { c : C }
  |                                      ^ token located here
  |
  = info: list

